--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button onclick="greetUser()">Submit</button>
         </div>
         <p id="greeting"></p>
+        <p>This is a new feature</p>
     </div>
     <script src="script.js"></script>
 </body>
